--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,6 +1,12 @@
 <h1><%= room.name %></h1>
 
-<%= form_with(model: room_comment, url: room_create_path(room)) do |form| %>
+<%= render partial: "room_comments/comments", locals: { room: room } %>
+
+<%= form_with(
+  model: room_comment,
+  url: room_create_path(room),
+  data: { turbo_frame: "comments" }
+) do |form| %>
   <%= form.label :body %>
   <%= form.text_field :body %>
 
